@@ -1,2 +1,0 @@
-<?xml version="1.0" ?>
-<extension class="xml_database.XMLDatabase" kind="database"/>
