@@ -1,3 +1,11 @@
+2004-02-13  Mark Mitchell  <mark@codesourcery.com>
+
+	* qm/common.py (open_temporary_file_fd): Add suffix parameter.
+	(open_temporary_file): Add mode and suffix parameters.
+	* qm/platform.py (get_shell_for_script): Use /c on Windows.
+	* qm/test/classes/command.py (ShellScriptTest): Make the 
+	script have a ".bat" extension on Windows.
+
 2004-02-08  Mark Mitchell  <mark@codesourcery.com>
 
 	* qm/test/web/web.py (ShowSuitePage.MakeDeleteScript): Return the
